@@ -4,11 +4,15 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package org.gridsuite.sensitivityanalysis.server.repositories.nonevacuatedenergy;
+package org.gridsuite.sensitivityanalysis.server.service.nonevacuatedenergy;
 
+import org.gridsuite.sensitivityanalysis.server.computation.service.AbstractComputationResultService;
+import org.gridsuite.sensitivityanalysis.server.dto.nonevacuatedenergy.NonEvacuatedEnergyStatus;
 import org.gridsuite.sensitivityanalysis.server.entities.nonevacuatedenergy.NonEvacuatedEnergyGlobalStatusEntity;
 import org.gridsuite.sensitivityanalysis.server.entities.nonevacuatedenergy.NonEvacuatedEnergyResultEntity;
-import org.springframework.stereotype.Repository;
+import org.gridsuite.sensitivityanalysis.server.repositories.nonevacuatedenergy.NonEvacuatedEnergyResultRepository;
+import org.gridsuite.sensitivityanalysis.server.repositories.nonevacuatedenergy.NonEvacuatedEnergyStatusRepository;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
@@ -16,20 +20,19 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * @author Franck Lecuyer <franck.lecuyer at rte-france.com>
  */
-@Repository
-public class NonEvacuatedEnergyRepository {
+@Service
+public class NonEvacuatedEnergyResultService extends AbstractComputationResultService<NonEvacuatedEnergyStatus> {
 
     private final NonEvacuatedEnergyStatusRepository nonEvacuatedEnergyStatusRepository;
 
     private final NonEvacuatedEnergyResultRepository nonEvacuatedEnergyResultRepository;
 
-    public NonEvacuatedEnergyRepository(NonEvacuatedEnergyStatusRepository nonEvacuatedEnergyStatusRepository,
-                                        NonEvacuatedEnergyResultRepository nonEvacuatedEnergyResultRepository) {
+    public NonEvacuatedEnergyResultService(NonEvacuatedEnergyStatusRepository nonEvacuatedEnergyStatusRepository,
+                                           NonEvacuatedEnergyResultRepository nonEvacuatedEnergyResultRepository) {
         this.nonEvacuatedEnergyStatusRepository = nonEvacuatedEnergyStatusRepository;
         this.nonEvacuatedEnergyResultRepository = nonEvacuatedEnergyResultRepository;
     }
@@ -39,10 +42,11 @@ public class NonEvacuatedEnergyRepository {
     }
 
     @Transactional
-    public void insertStatus(List<UUID> resultUuids, String status) {
+    @Override
+    public void insertStatus(List<UUID> resultUuids, NonEvacuatedEnergyStatus status) {
         Objects.requireNonNull(resultUuids);
         nonEvacuatedEnergyStatusRepository.saveAll(resultUuids.stream()
-            .map(uuid -> toStatusEntity(uuid, status)).collect(Collectors.toList()));
+            .map(uuid -> toStatusEntity(uuid, status.name())).toList());
     }
 
     @Transactional
@@ -57,6 +61,7 @@ public class NonEvacuatedEnergyRepository {
     }
 
     @Transactional
+    @Override
     public void delete(UUID resultUuid) {
         Objects.requireNonNull(resultUuid);
         nonEvacuatedEnergyStatusRepository.deleteByResultUuid(resultUuid);
@@ -64,17 +69,19 @@ public class NonEvacuatedEnergyRepository {
     }
 
     @Transactional
+    @Override
     public void deleteAll() {
         nonEvacuatedEnergyStatusRepository.deleteAll();
         nonEvacuatedEnergyResultRepository.deleteAll();
     }
 
     @Transactional(readOnly = true)
-    public String findStatus(UUID resultUuid) {
+    @Override
+    public NonEvacuatedEnergyStatus findStatus(UUID resultUuid) {
         Objects.requireNonNull(resultUuid);
         NonEvacuatedEnergyGlobalStatusEntity globalEntity = nonEvacuatedEnergyStatusRepository.findByResultUuid(resultUuid);
         if (globalEntity != null) {
-            return globalEntity.getStatus();
+            return NonEvacuatedEnergyStatus.valueOf(globalEntity.getStatus());
         } else {
             return null;
         }
